--- a/jupyter_notebooks/02-Visualisation.ipynb
+++ b/jupyter_notebooks/02-Visualisation.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **(ADD HERE THE NOTEBOOK NAME)**"
+        "# **02 Visualisation of Data**"
       ]
     },
     {
@@ -17,19 +17,21 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write here your notebook objective, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Meet Requirements for Business requirement One -\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
+        "- inputs/cherry_leaves/train\n",
+        "- inputs/cherry_leaves/test\n",
+        "- inputs/cherry_leaves/test\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
+        "- Image shape embeddings pickle file.\n",
+        "- Mean and variability of images per label plot.\n",
+        "- Plot to distinguish the contrast between healthy leaves and ones infected with powdery mildew.\n",
+        "- Generate code that satisfies business requirement 1 and can be used to build an image montage on the Streamlit dashboard.\n",
         "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n",
         "\n"
       ]
     },
@@ -78,8 +80,12 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "current_dir = os.getcwd()\n",
-        "current_dir"
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import joblib\n",
+        "from matplotlib.image import imread"
       ]
     },
     {
@@ -134,14 +140,14 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1"
+        "# Set up Input and Output Paths"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 1 content"
+        "Inputs"
       ]
     },
     {
@@ -149,7 +155,54 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "my_data_dir = 'inputs/cherry_leaves'\n",
+        "train_path = my_data_dir + '/train'\n",
+        "vald_path = my_data_dir + '/validation'\n",
+        "test_path = my_data_dir + '/test'"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Outputs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "version = 'v1.0'\n",
+        "\n",
+        "file_path = f'outputs/{version}'\n",
+        "version_file_path = os.path.join(current_dir, file_path)\n",
+        "\n",
+        "if os.path.exists(version_file_path):\n",
+        "    print(f\"version {version} already exists. Please create a new version\")\n",
+        "    pass\n",
+        "else:\n",
+        "    os.makedirs(name=file_path)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Set Labels"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "labels = sorted(os.listdir(train_path))\n",
+        "print(\"Label for images are\", labels)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -166,14 +219,16 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Section 2"
+        "# Data Visualization For Dataset"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 2 content"
+        "Image Shape Embeddings\n",
+        "\n",
+        "Calculate the average size, being height and width in pixles, of images in the dataset"
       ]
     },
     {
@@ -181,7 +236,48 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "sim1, sim2 = [], []\n",
+        "for Label in labels:\n",
+        "    for image_filename in os.listdir(train_path + '/' + Label):\n",
+        "        image = imread(train_path + '/' + Label + '/' + image_filename)\n",
+        "        s1, s2, colours = image.shape\n",
+        "        sim1.append(s1)\n",
+        "        sim2.append(s2)\n",
+        "        \n",
+        "sns.set_style(\"whitegrid\")\n",
+        "fig, axes = plt.subplots()\n",
+        "sns.scatterplot(x=sim2, y=sim1, alpha=0.2)\n",
+        "axes.set_xlabel(\"Width (pixels)\")\n",
+        "axes.set_ylabel(\"Height (pixels)\")\n",
+        "dim1_mean = int(np.array(sim1).mean())\n",
+        "dim2_mean = int(np.array(sim2).mean())\n",
+        "axes.axvline(x=dim1_mean, color='r', linestyle='--')\n",
+        "axes.axhline(y=dim2_mean, color='r', linestyle='--')\n",
+        "plt.show()\n",
+        "print(f\"Width average: {dim2_mean} \\nHeight average: {dim1_mean}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "image_shape = (dim1_mean, dim2_mean, 3)\n",
+        "image_shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "joblib.dump(value=image_shape,\n",
+        "            filename=f\"{file_path}/image_shape.pkl\")"
+      ]
     },
     {
       "cell_type": "markdown",
