--- a/jupyter_notebooks/02-Visualisation.ipynb
+++ b/jupyter_notebooks/02-Visualisation.ipynb
@@ -283,62 +283,286 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---"
+        "### Mean and Variability of data per label"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "NOTE"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* You may add as many sections as you want, as long as it supports your project workflow.\n",
-        "* All notebook's cells should be run top-down (you can't create a dynamic wherein a given point you need to go back to a previous cell to execute some task, like go back to a previous cell and refresh a variable content)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ltNetd085qHf"
-      },
-      "source": [
-        "# Push files to Repo"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* If you don't need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
+        "To load and preprocess image data from a directory into numpy arrays"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "aKlnIozA4eQO",
-        "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
-        "try:\n",
-        "    # create here your folder\n",
-        "    # os.makedirs(name='')\n",
-        "except Exception as e:\n",
-        "    print(e)\n"
+        "from tensorflow.keras.preprocessing import image\n",
+        "\n",
+        "def load_image_as_array(my_data_dir, new_size=(50, 50), n_images_per_label=20):\n",
+        "\n",
+        "  X, y = np.array([], dtype='int'), np.array([], dtype='object')\n",
+        "  labels = os.listdir(my_data_dir)\n",
+        "\n",
+        "  for label in labels:\n",
+        "    counter = 0\n",
+        "    for image_filename in os.listdir(my_data_dir + '/' + label):\n",
+        "      \n",
+        "      if counter < n_images_per_label:\n",
+        "       \n",
+        "        img = image.load_img(my_data_dir + '/' + label +\n",
+        "                             '/' + image_filename, target_size=new_size)\n",
+        "                             \n",
+        "        \n",
+        "        if image.img_to_array(img).max() > 1:\n",
+        "          img_resized = image.img_to_array(img) / 255\n",
+        "        else:\n",
+        "          img_resized = image.img_to_array(img)\n",
+        "        \n",
+        "        \n",
+        "        X = np.append(X, img_resized).reshape(-1,\n",
+        "                                              new_size[0], new_size[1], img_resized.shape[2])\n",
+        "        y = np.append(y, label)\n",
+        "        counter += 1\n",
+        "\n",
+        "  return X, y"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Load the images shapes and labels into an array"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X, y = load_image_as_array(my_data_dir=train_path,\n",
+        "                           new_size=image_shape,\n",
+        "                           n_images_per_label=30)\n",
+        "print(X.shape, y.shape)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Plot the mean and variability of images per label."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def plot_mean_variability_per_labels(X, y, figsize=(12, 5), save_image=False):\n",
+        "  \n",
+        "  for label_to_display in np.unique(y):\n",
+        "    sns.set_style(\"white\")\n",
+        "    \n",
+        "    y = y.reshape(-1, 1, 1)\n",
+        "    boolean_mask = np.any(y == label_to_display, axis=1).reshape(-1)\n",
+        "    arr = X[boolean_mask]\n",
+        "    \n",
+        "    \n",
+        "    avg_img = np.mean(arr, axis=0)\n",
+        "    std_img = np.std(arr, axis=0)\n",
+        "\n",
+        "   \n",
+        "    print(f\"==== Label {label_to_display} ====\")\n",
+        "    print(f\"Image Shape: {avg_img.shape}\")\n",
+        "    fig, axes = plt.subplots(nrows=1, ncols=2, figsize=figsize)\n",
+        "    axes[0].set_title(f\"Average Image for label {label_to_display}\")\n",
+        "    axes[0].imshow(avg_img, cmap='gray')\n",
+        "    axes[1].set_title(f\"Variability image for label {label_to_display}\")\n",
+        "    axes[1].imshow(std_img, cmap='gray')\n",
+        "\n",
+        "    \n",
+        "    if save_image:\n",
+        "      plt.savefig(f\"{file_path}/avg_var_{label_to_display}.png\",\n",
+        "                  bbox_inches='tight', dpi=150)\n",
+        "    else:\n",
+        "      plt.tight_layout()\n",
+        "      plt.show()\n",
+        "      print(\"\\n\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plot_mean_variability_per_labels(X=X, y=y, figsize=(12,5),save_image=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Visualising between healthy and infected leaves"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def subset_image_label(X, y, label_to_display):\n",
+        "  \"\"\"\n",
+        "  Select all images from X that have the label label_to_display in y.\n",
+        "  \"\"\"\n",
+        "  y = y.reshape(-1, 1, 1)\n",
+        "  boolean_mask = np.any(y == label_to_display, axis=1).reshape(-1)\n",
+        "  df = X[boolean_mask]\n",
+        "  return df\n",
+        "\n",
+        "\n",
+        "def diff_bet_avg_image_labels_data_as_array(X, y, label_1, label_2, figsize=(20, 5), save_image=False):\n",
+        "  \"\"\"\n",
+        "  Calculate the average image for two different labels in X, and plot the difference between them.\n",
+        "  \"\"\"\n",
+        "  sns.set_style(\"white\")\n",
+        "\n",
+        "  if (label_1 not in np.unique(y)) or (label_2 not in np.unique(y)):\n",
+        "    print(\n",
+        "        f\"Either label {label} or label {label_2}, are not in {np.unique(y)} \")\n",
+        "    return\n",
+        "\n",
+        "  # calculate mean from label1\n",
+        "  images_label = subset_image_label(X, y, label_1)\n",
+        "  label1_avg = np.mean(images_label, axis=0)\n",
+        "\n",
+        "  # calculate mean from label2\n",
+        "  images_label = subset_image_label(X, y, label_2)\n",
+        "  label2_avg = np.mean(images_label, axis=0)\n",
+        "\n",
+        "  # Calculate the difference between the mean images and plot them.\n",
+        "  difference_mean = label1_avg - label2_avg\n",
+        "  difference_mean = label1_avg - label2_avg\n",
+        "  fig, axes = plt.subplots(nrows=1, ncols=3, figsize=figsize)\n",
+        "  axes[0].imshow(label1_avg, cmap='gray')\n",
+        "  axes[0].set_title(f'Average {label_1}')\n",
+        "  axes[1].imshow(label2_avg, cmap='gray')\n",
+        "  axes[1].set_title(f'Average {label_2}')\n",
+        "  axes[2].imshow(difference_mean, cmap='gray')\n",
+        "  axes[2].set_title(f'Difference image: Avg {label_1} & {label_2}')\n",
+        "  if save_image:\n",
+        "    plt.savefig(f\"{file_path}/avg_diff.png\", bbox_inches='tight', dpi=150)\n",
+        "  else:\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "diff_bet_avg_image_labels_data_as_array(X=X, y=y,\n",
+        "                                        label_1='healthy', label_2='powdery_mildew',\n",
+        "                                        figsize=(12, 10),\n",
+        "                                        save_image=True\n",
+        "                                        )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Image Montage\n",
+        "\n",
+        "Plot a montage of healthy and infected leaves"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import itertools\n",
+        "import random\n",
+        "# Set the style of the plots to white\n",
+        "sns.set_style(\"white\")\n",
+        "\n",
+        "def image_montage(dir_path, label_to_display, nrows, ncols, figsize=(15, 10)):\n",
+        "  # Get a list of all the labels in the directory\n",
+        "  labels = os.listdir(dir_path)\n",
+        "\n",
+        "  # Check if the label to display exists in the directory\n",
+        "  if label_to_display in labels:\n",
+        "\n",
+        "    # Check if the montage space is greater than the number of images in the \n",
+        "    # label folder\n",
+        "    images_list = os.listdir(dir_path+'/' + label_to_display)\n",
+        "    if nrows * ncols < len(images_list):\n",
+        "      # Randomly select a subset of the images to display\n",
+        "      img_idx = random.sample(images_list, nrows * ncols)\n",
+        "    else:\n",
+        "      # Print an error message if the number of spaces in the montage is less \n",
+        "      # than or equal to the number of images in the label folder\n",
+        "      print(\n",
+        "          f\"Decrease nrows or ncols to create your montage. \\n\"\n",
+        "          f\"There are {len(images_list)} in your subset. \"\n",
+        "          f\"You requested a montage with {nrows * ncols} spaces\")\n",
+        "      return\n",
+        "\n",
+        "    # Create a list of axes indices based on the number of rows and columns\n",
+        "    list_cols = range(0, ncols)\n",
+        "    list_rows = range(0, nrows)\n",
+        "    plot_idx = list(itertools.product(list_rows, list_cols))\n",
+        "    # Create a Figure and display the images\n",
+        "    fig, axes = plt.subplots(nrows=nrows, ncols=ncols, figsize=figsize)\n",
+        "    for x in range(0, nrows*ncols):\n",
+        "      # Load and plot the image at the given index\n",
+        "      img = imread(dir_path + '/' + label_to_display + '/' + img_idx[x])\n",
+        "      img_shape = img.shape\n",
+        "      axes[plot_idx[x][0], plot_idx[x][1]].imshow(img)\n",
+        "      axes[plot_idx[x][0], plot_idx[x][1]].set_title(\n",
+        "          f\"Width {img_shape[1]}px x Height {img_shape[0]}px\")\n",
+        "      axes[plot_idx[x][0], plot_idx[x][1]].set_xticks([])\n",
+        "      axes[plot_idx[x][0], plot_idx[x][1]].set_yticks([])\n",
+        "    # Adjust the layout of the subplots and show the montage\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "  else:\n",
+        "    # Print an error message if the label to display is not in the directory\n",
+        "    print(\"The label you selected doesn't exist.\")\n",
+        "    print(f\"The existing options are: {labels}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "for label in labels:\n",
+        "  print(label)\n",
+        "  image_montage(dir_path=train_path,\n",
+        "                label_to_display=label,\n",
+        "                nrows=3, ncols=3,\n",
+        "                figsize=(10, 15)\n",
+        "                )\n",
+        "  print(\"\\n\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
       ]
     }
   ],
