--- a/jupyter_notebooks/01-Data-Gathering.ipynb
+++ b/jupyter_notebooks/01-Data-Gathering.ipynb
@@ -58,9 +58,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "122.42s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Defaulting to user installation because normal site-packages is not writeable\n",
+            "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ],
       "source": [
         "! pip install -r requirements.txt"
       ]
@@ -74,9 +91,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'numpy'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+          ]
+        }
+      ],
       "source": [
         "import numpy\n",
         "import os"
@@ -110,12 +139,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'/workspace/Mildew-Detection/jupyter_notebooks'"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "current_dir = os.getcwd()\n",
@@ -438,11 +478,9 @@
       "provenance": [],
       "toc_visible": true
     },
-    "interpreter": {
-      "hash": "8b8334dab9339717f727a1deaf837b322d7a41c20d15cc86be99a8e69ceec8ce"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.12 64-bit ('3.8.12': pyenv)",
+      "display_name": "Python 3.8.10 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -455,9 +493,14 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12"
+      "version": "3.10.6"
     },
-    "orig_nbformat": 2
+    "orig_nbformat": 2,
+    "vscode": {
+      "interpreter": {
+        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+      }
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 2
