Added some extra Readme content.

--- a/jupyter_notebooks/01-Data-Gathering.ipynb
+++ b/jupyter_notebooks/01-Data-Gathering.ipynb
@@ -173,13 +173,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "source": [],
+      "cell_type": "code",
       "metadata": {
         "id": "M_xPk_Ijz3i-"
       },
-      "source": [
-        "Confirm the new current directory"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -237,13 +237,16 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "source": [
+        "os.environ['KAGGLE_CONFIG_DIR'] = os.getcwd()\n",
+        "! chmod 600 kaggle.json"
+      ],
+      "cell_type": "code",
       "metadata": {
         "id": "ZY3l0-AxO93d"
       },
-      "source": [
-        "---"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -255,11 +258,11 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
       "source": [
         "Set Kaggle Dataset and download directorys"
-      ]
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -268,15 +271,22 @@
       "outputs": [],
       "source": [
         "KaggleDatasetPath = \"codeinstitute/cherry-leaves\"\n",
-        "DestinationFolder = \"inputs/cherry-leaves\""
+        "DestinationFolder = \"inputs/cherry-leaves\"\n",
+        "! kaggle datasets download -d {KaggleDatasetPath} -p {DestinationFolder}"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
       "source": [
-        "---"
-      ]
+        "import zipfile\n",
+        "with zipfile.ZipFile(DestinationFolder + '/cherry-leaves.zip', 'r') as zip_ref:\n",
+        "    zip_ref.extractall(DestinationFolder)\n",
+        "\n",
+        "os.remove(DestinationFolder + '/cherry-leaves.zip')"
+      ],
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
